.demo/manifests/apps/silverbullet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: silverbullet
  namespace: silverbullet
  labels:
    app: silverbullet
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: silverbullet
