.demo/manifests/apps/silverbullet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: silverbullet
  namespace: silverbullet
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-authentik-forwardauth@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  rules:
    - host: notes.kraleo.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: silverbullet
                port:
                  number: 3000
  tls:
    - secretName: silverbullet-tls
      hosts:
        - notes.kraleo.win
